+ toList() -> collect(Collectors.toList()))